[package]
name = "aoc2015"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day01_part1"
path = "src/day01/part1.rs"

[[bin]]
name = "day01_part2"
path = "src/day01/part2.rs"

[lib]
name = "day02"
path = "src/day02/day02.rs"

[[bin]]
name = "day02_part1"
path = "src/day02/part1.rs"

[[bin]]
name = "day02_part2"
path = "src/day02/part2.rs"

[[bin]]
name = "day03_part1"
path = "src/day03/part1.rs"

[[bin]]
name = "day03_part2"
path = "src/day03/part2.rs"

[[bin]]
name = "day04_part1"
path = "src/day04/part1.rs"

[[bin]]
name = "day04_part2"
path = "src/day04/part2.rs"

[[bin]]
name = "day05_part1"
path = "src/day05/part1.rs"

[dependencies]

md5 = "0.7.0"
